mxslc/tests/data/error/bad_data_type_5.mxsl
float a = 1.0;
a = color3(1.0, 0.0, 0.0);